<resources>
    <string name="app_name">Cikitsa</string>
    <string name="button1">হাসপাতাল (মাগুরা)</string>
    <string name="button_hospitals">হাসপাতাল (মাগুরা)</string>
    <string name="wellcome_text">চিকিৎসা অ্যাপে স্বাগতম</string>
    <string name="know_more">আরও জানুন</string>
    <string name="call_emergency">ইমারজেন্সি কল</string>
    <string name="app_details_full">App Version 1.4\nApp Size 2 Mb/-\nApp Update Date:12 February 2019\nApp Publish Date: 1 January 2019 </string>
    <string name="app_name_in_details">Cikitsa App</string>
    <string name="developers_name_title">Developers</string>
    <string name="developers_full_details">Developer : Sharif Rafid-Ur-Rahman\n\nInfo Collection:\n\n    Yusuf Zayed Takbir\n    Md. Mehedi Hasan\n    Md. Masum Billah\n    Tahmid Sami\n\nTyping Help:\n\n    Sharif Sadik Ur Rahman\n    Sharif Rafaj Ur Rahman\n\nAd.:\n\n    Sharif Ashikur Rahman\n    Shuvradev Biswas</string>
    <string name="search_with_name_bar">হাসপাতালের নাম লিখে সার্চ দিন</string>
    <string name="old_list">আগের ভার্শন</string>
    <string name="facebook">লাইক দিন</string>
    <string name="donate_us">রেট করুন</string>
    <string name="mail_us">ইমেইল করুন</string>
    <string name="wellcome_note">চিকিৎসা অ্যাপ এ স্বাগতম</string>
    <string name="edittext_hint_1">আপনি কি অসুস্থতা বোধ করছেন ?</string>
    <string-array name="disease_name">
        <item>মাথা ব্যাথা</item>
        <item>পেটে ব্যাথা</item>
        <item>মাযায় ব্যথা</item>
        <item>পায়ে ব্যাথা</item>
        <item>ঘাড়ে ব্যথা</item>
        <item>বুকে ব্যথা</item>
        <item>গলায় ব্যথা</item>
        <item>কানে ব্যথা</item>
        <item>নাকে ব্যথা</item>
        <item>দাতে ব্যথা</item>
        <item>চোখে ব্যথা</item>
        <item>কেটে যাওয়া</item>
        <item>হাত-পা ভাঙ্গা</item>
        <item>জ্বিভ পোড়া</item>
        <item>পুড়ে যাওয়া</item>
        <item>দাদ</item>
        <item>ছুলি</item>
        <item>ডায়াবেটিস</item>
        <item>চর্ম রোগ</item>
        <item>সাপে কামড়ানো</item>
        <item>পশু-পাখির কামড়</item>
        <item>পোকার কামড়</item>
        <item>জ্বর</item>
        <item>ঠান্ডা</item>
        <item>কাশি</item>
        <item>শ্বাস কষ্ট</item>
        <item>পলিপাস-পাইলস</item>


    </string-array>
    <string-array name="disease_keywords">
        <item> mathabatha,headache,head,batha,matha,martha,pain,headpain,headinjuri,মাথা,মাথাব্যথা,মাথাব্যাথা,মাথায়ব্যাথা,মাতা,মাথায়ব্যথা,ব্যাথা,ব্যথা</item>
        <item>stomachache,stomach ache,stomace,stomachache, stomachac,belli,belly,bellypain,bellipain,belli pain,belly pain,pain,পেট,প্যাট,পেটে ব্যাথা,পেটে ব্যথা,পেটে</item>
        <item>back pain,backpain,back,pain,komor,komore betha,komorebatha,mazabatha,mazaybatha,maza batha,maja batha,majabatha,majaybatha,majabetha,majaybetha,maja betha,mazabetha,mazaybetha, maza betha,কোমর,কমর,মাযা,মাজা,মাযায় ব্যথা,কোমরে ব্যাথা,কোমরে ব্যথা</item>
        <item>foot pain,leg pain,leg,foot,footpain,legpain,pain,lag,lag pain,paye betha,paye batha,pay betha,paye betha,payebatha,pa betha,pa batha,pa,betha,batha,পা,পায়ে ব্যাথা,পায়ে ব্যথা,পায়ে বথা,পায়ে,ব্যাথা,হাটুতে ব্যথা,হাটুতে ব্যাথা,হাটু ব্যাথা,হাটু,hatu,hatu batha,bone,bone pain</item>
        <item>ghare batha ,ghar pain,ghar,gar,gare batha,gar batha,gar bata,batha,bata,betha,beta,ghar betha,ghare betha,ghar betha,ঘাড়ে ব্যথা,ঘড়ে ব্যথা,ঘড়,ঘাড়,ঘড়ে ব্যাথা,ব্যাথা,ঘাড়ে ব্যাথা,ঘাড় ব্যাথা,ঘার ব্যাথা,ঘার,গার,গার ব্যথা,ব্যাথা,ঘাড় ব্যাথা,ব্যাথা,ব্যাথ,ব্যাতা</item>
        <item>buka batha,hard problems,buke,problems buke,bake,baka,buk batha,buka batha,chest pain,chest,chest,buk,bak,buke batha,buk batha,chest,chest pain,chst pain,chst,cest,sest,creast,pain,বুকে ব্যাথা,বুকে ব্যথা,বুক ব্যাথা,বুক,বুক,বূক,বূকে ব্যথা,বূকে ব্যাথা,ব্যাথা,ব্যথা</item>
        <item>gola batha,gola,throat,throat problams,throat batha,thrat,throd,throad,thot,throt,thorote,thore,throte,trot,trote,troth,throth,গলা,গল,গলবিল,গললিল,গলিল,গলা ব্যথা,গলা ব্যাথা,গলা ব্যথা,ব্যাথা,ব্যথা,গল,গলনাঙ্ক,গলায় ব্যাথা,গলায়,গলায় ব্যথা</item>
        <item>কানে ব্যথা,কান,কান ব্যাথা,কান ব্যথা,কানে ব্যাথা,ব্যাথা,ব্যথা,earphone,ear,ear pain,ear problems,ear,hear,hearing,hearing problem,her,year,year pain,earpain,earpin,kane batha,kan betha,kone betha,kan betha,betha,batha</item>
        <item>নাক,নাকে ব্যাথা,নাকে ব্যথা,নাক ব্যাথা,নাক ব্যথা,ব্যথা,ব্যাথা,ব্যতা,বতা,বথা,ব্যাতা,নসিকা,নাক,nose,nake betha,nak,nake batha,beta,betha,bata,nose pain,pain,nose,nose pain,nak batha,nak betha,nose problem,bleed nose,nose bleed,bleed</item>
        <item>দাত,দন্ত,দাতে ব্যাথা,ব্যথা,দাতে ব্যথা,দাতে ব্যাথা,দাতের গোড়ায় ব্যথা,দাতের গোড়ায় ব্যাথা,tooth,teeth,teet,teeth pain,tteeth,teet pain,toothache,tooth ache,tooth ace,tooth,tooth pain,teeth pain</item>
        <item>চোখ,দৃষ্টি,আখী,দৃষ্টিশক্তি,চোখে ব্যথা,চোখে ব্যাথা,চোখ ছোলা,চোখে রক্ত আসা,চোখ দিয়ে রক্ত পড়া,চোখের সমস্যা,eye,sight,eye pain,see,visual,virtual,visualization,visual,eye pain,visual problems,eye problems,chok,choke,coke,cok,cokh,cokhe,choke batha,chokhe batha,coke batha,</item>
        <item>কেটে যাওয়া,কাটা,কাটা ছেড়া,ব্যথা,ব্যাথা,কেটে,কাটা,পড়ে যাওয়া,হাত,পা,মাথা,হাটূ,হাটু,cut,kete jaoa,cut,blood,bleed,cete jaoa,chete jaoa,chete,hand cut,leg cut,foot cut,hat kata,pa kata,mata kata,matha kata,kata,kat,kan kata,</item>
        <item>hat,pa,hat vanga,hat vana,hat vnga,hat vna,vanga,vnga,vana,pa vanga,pa vana,pa vnga,pa,vga,banga,hat pa vanga,hat pa vana,break,hand,leg,foot,broken,হাত,পা,হাত ভাঙ্গা,পা ভাঙ্গা,হাত পা ভাঙ্গা,ভাঙ্গা,ভানগা,ভাগা,ভাঙ্গা,বাঙ্গা,বাঙ্গা</item>
        <item>জ্বিভ পোড়া,জ্বিভ,জ্বীভ,জিভ,জীভ,পোড়া,পুড়ে যাওয়া,পোরা,পোড়া,jiv pora,jiva,jiba,jiba pora,jibha,pure jaoa,pura,giva,giba,jeva,jiva,tounge,burn</item>
        <item>pure jaoa,pora,pura,pira,pra,poora,poura,pra,পুরা,পুরে যাওয়া,পুড়া,পুড়ে জাওয়া,পুড়ে,পূড়া,পূরা,পূরে,পূড়ে,পড়া,হাত পোড়া,পা পোড়া,গা পোড়া,জ্বিভ পোড়া,নাক পোড়া,কান পোড়া,পোড়া,পোরা,পুরা,প্যারা</item>
        <item>দাদ,দাত,দাড,dad,daud,dad,did,dd</item>
        <item>chuli,cholom,choli,coli,cola,tok,cormo,kormo,skin,burn,skin burn,ছুলি,ছলম,ত্বক,চামড়া,ছোলা,সাদা দাগ</item>
        <item>ডায়াবেটিস,ডায়বেটিস,ডায়বেটিক,ডায়বেট,ডায়েট,diabetes,diabetis,dibetsi,dibetis</item>
        <item>চর্ম রোগ,চর্ম,চমড়া,চামড়া,চামড়,ত্বক,স্কীন,skin,tok,toke,skin disease,tok rog</item>
        <item>snake bite,sap,anaconda,snake,rattle,bite,সাপ,সাপে,সাপে কামড়ান,সাপেকামড়ানো,সাপে কামড়ানো,সর্প,সরপ</item>
        <item>পশু-পাখীর কামড়,কামড়,কামড়ানো,পশু,কুকুর,বিড়াল,বাঘ,সিঙ্ঘ,animal,dog,cat,tiger,animal bites,bites,bite</item>
        <item>insect,bite,insect bite,inset bite,পোকা,পোকার কামড়,কামড়,কাটা</item>
        <item>জ্বর,জর,জোর,জর আসা,জ্বর আসা,ঠান্ডা,টান্ডা,fever,flue,disease,cold,cough,fevar,favar,jor,gor,jhor,zor</item>
        <item>ঠান্ডা,টান্ডা,ঠাডা,কাশী,নাক,cold,fever,cough</item>
        <item>kasi,cough,cold,coughing,couf,cof,cougf,কাশী,কাশি,কফ,ঠান্ডা,hoping kasi,hupping kasi,hooping kasi</item>
        <item>asthma,sas kosto,inhealer,In healer,asma,asthema,শ্বাস কষ্ট,অ্যাজমা,শ্বাস,নিশ্বাস</item>
        <item>পলিপাস,পাইলস,polipas,polypas,polipas,pyles,piles,pyls,polpas</item>
    </string-array>
</resources>