<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme1"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/old_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_design__1"
            android:padding="10dp"
            android:text="@string/old_list"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/bensenhand_font"/>
        <Button
            android:id="@+id/mail_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_us"
            android:background="@drawable/button_design__1"
            android:padding="10dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/bensenhand_font"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:background="@drawable/button_design__1"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/bensenhand_font"/>
        <Button
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_us"
            android:background="@drawable/button_design__1"
            android:padding="10dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/bensenhand_font"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>