<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme1"
    android:orientation="vertical"
    tools:context=".more">

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button_design__1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name_in_details"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bensenhand_font"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_design__1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_details_full"
            android:textColor="#000"
            android:textStyle="bold|italic"
            android:fontFamily="@font/bensenhand_font"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design__1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/developers_name_title"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/bensenhand_font"/>

        <ScrollView
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/theme1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/bensenhand_font"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/developers_full_details"
                android:textColor="#000"
                android:textStyle="bold|italic"
                android:visibility="visible" />
        </ScrollView>


    </LinearLayout>
</LinearLayout>