<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme1"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lin_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_design__1"
                android:elevation="10dp"
                android:padding="10dp"
                app:srcCompat="@android:drawable/ic_menu_manage" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_design__1"
                android:elevation="10dp"
                android:padding="10dp"
                app:srcCompat="@android:drawable/btn_star" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/edit_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/edit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/list_design"
                    android:elevation="10dp"
                    android:fontFamily="@font/bensenhand_font"
                    android:gravity="center"
                    android:hint="@string/edittext_hint_1"
                    android:padding="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/voice"
                    android:layout_width="54dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_design__1"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/presence_audio_online"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>

            <ListView
                android:id="@+id/grid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:verticalSpacing="2dp"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mid_linear"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_design__1"
                android:elevation="10dp"
                android:fontFamily="@font/bensenhand_font"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/button_hospitals"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/low_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme_2"
                android:elevation="10dp"
                android:fontFamily="@font/bensenhand_font"
                android:gravity="center"
                android:text="@string/know_more"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_theme_1"
                android:elevation="10dp"
                android:fontFamily="@font/bensenhand_font"
                android:gravity="center"
                android:text="@string/call_emergency"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tipss"
                android:text="ঔষধ থেকে খাদ্যের মাধ্যমে উপশম শ্রেয়"
                android:fontFamily="@font/bensenhand_font"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="#4c5c4d"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>